2006-06-26 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (genFunction, genEndFunction): also preserve
	  PCLATH and PCLATU on interrupts, potentially fixes #1505141

2006-06-25 Raphael Neider <rneider AT web.de>

	* device/lib/pic/libm: NEW, added math library functions
	* device/lib/pic/libsdcc: NEW; added float support functions
	* device/lib/pic/{Makefile.in,configure.in,configure}: added libm/
	* device/include/pic/{limits.h,errno.h,sdcc-lib.h,float.h,math.h}:
	  NEW, added math related headers
	* device/include/asm/pic/features.h: NEW
	* src/pic/gen.c (emitpcode_real): emit warning on NULL pCodeOp,
	  (popGet): allow larger offsets for AOP_PCODE,
	  (genDataPointerSet): handle literals explicitly, more debug output,
	  (genAssign): fixed for float using aopLiteral ;-)
	* src/pic/glue.c (pic14createInterruptVect): inserted pagesel before
	  GOTO initialisation routine
	* src/pic/pcoderegs.c (pCodeRegMapLiveRangesInFlow): set wasUsed
	  flag on registers, fixes #1469043 (local variables do not work)
	* src/pic/main.c (_pic14_do_link),
	* src/pic16/main.c (_pic16_linkEdit): use fullDstFileName if
	  available

2006-06-25 Borut Razem <borut.razem AT siol.net>

	* device/lib/pic16/libc/stdio/sprintf.c: return the number of
	  characters printed (not including the trailing '\0' used to end
	  output to strings). Problem detected in regression test bug-927659.c.
	  NOTE: printf() family functions should return int instead
	  unsigned int!
	* device/lib/pic16/libc/stdio/vfprintf.c: "%%" prints "%", unknown
	  specifier are printed as themselves
	* sdcc/support/regression/tests/bug1057979.c: pic16 printf doesn't
	  support flags, width and precision specifiers

2006-06-24 Borut Razem <borut.razem AT siol.net>

	* sdcc/support/regression/tests/bitvars.c: added gbz80, pic16 and pic16
	  to the list of sdcc tagrets not supporting bit type
	* sdcc/support/regression/tests/bug-905992.c.c: excluded regression
	  testfor pic16 due to bug: